# InfoNet

./: LICENSE  README.md  main.py  pyproject.toml
java/: README.md
java/com/miller/infonet/: FXMLController.java  MainApp.java
java/com/miller/infonet/base/: InfoNet_3.java  Options.java  PageManager.java
java/com/miller/infonet/data/container/: Database.java  ListingContainer.java  Spread.java
java/com/miller/infonet/data/listing/: Anime.java  LightNovel.java  Listing.java  Listings.java  Manga.java  Movie.java  VideoGame.java  VisualNovel.java
java/com/miller/infonet/visuals/: NavigationBar.java  Page.java  SearchBar.java  StatusBar.java
java/com/miller/infonet/visuals/pages/home/: MainPage.java  SpreadViewer.java
java/com/miller/infonet/visuals/pages/newlisting/: NewAnimePage.java  NewLightNovelPage.java  NewListingPage.java  NewMangaPage.java  NewMoviePage.java  NewVideoGamePage.java  NewVisualNovelPage.java
python/: anime_table.py  core.py  manga_table.py  media.py  media_table.py  movie_table.py
resources/fxml/: Scene.fxml
