[tool.poetry]
name = "repl_python3_InfoNet"
version = "0.1.0"
description = ""
authors = ["blackbluue <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
